--- a/app.css
+++ b/app.css
@@ -1,75 +1,122 @@
-#box{
-  width:370px;
-  height:309px;
-  border-top: 0.02px solid #f1f1f1;
-  box-sizing: border-box;
-  margin-top:10px;
-  margin-left:10px;  
-}
-p{
-  font-family:"Times";
-  font-weight:lighter;
-}
-#last_price{
-  font-size:22px;
-  padding-left:6px;
-  font-weight:lighter;
- 
-}
-h1{
-  font-size:22px;
-  font-family:"Times";
-  font-weight:100;
-  font-variant-caps: all-small-caps;
-  word-wrap:normal;
-}
-#data{
-  font-size:0.7em;
-  color:grey;
-}
-.change{
-  float:right;
-  color:green;
+#quote-module {
+  font-family: sans-serif;
+  -webkit-font-smoothing: antialiased;
+  text-shadow: 1px 1px 1px 1px rgba(0,0,0,0.005);
+  border-top: 1px solid #eee;
+  width: 370px;
+  min-height: 300px;
+  margin-top: 10px;
+  margin-left: 10px;  
 }
 
-.val{
-  float:right;
-  font-weight:bolder;
-  color:black;
-  font-size:13px;
+.separator {
+  border-top: 3px solid grey;
+  margin-top:8px;
 }
-input{
-  width:183px;
-  height:30px;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 5px 0 0 5px;
-  box-sizing: border-box;
+
+.container-top {
+  height: 40px;
+  border: 1px solid;
+  padding-bottom: 10px;
 }
-button{
-  float: right;
-  width:183px;
-  height:30px;
-  border-radius: 0 5px 5px 0 ;
+
+h1 {
+  font-family: "Times";
+  font-size: 23px;
+  font-variant-caps: all-small-caps;
+  font-weight: 100;
+  color: #222222;
+  line-height: 80%;
+}
+
+.large {
+  height: 40px;
+  border-bottom: 1px solid #cccccc;
+}
+
+.last-price {
+  flex: 8;
+  font-family: "Times";
+  font-size: 1.5em;
+  font-weight: lighter;
+  padding-left: 3px;
+}
+
+.change, .change-percent {
+  flex: 1;
+  justify-content: flex-end;
+  font-family: "Times";
+  font-size: 1.1em;
+  padding-right: 2px;
+  color:#008000;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.data, .label {
+  flex: 1 0 40%;
+  border-bottom: 1px solid #cccccc;
+  height: 31px;
+  color: #000000;
+  display: flex;
+  align-items: center;
+}
+
+.change-data {
+  justify-content: flex-end;
+}
+
+.high-low span {
+  padding-left: 4px;
+}
+
+.label, .time-stamp {
+  font-size: 0.7em;
+  color: #666666;
+}
+
+.time-stamp {
+  text-align: right;
+  border-bottom: 1px solid #cccccc;
+  height: 24px;
+  margin-bottom: 7px;
+}
+
+.data {
+  justify-content: flex-end;
+  font-weight: bolder;
+  color: black;
+  font-size: 13px;
+}
+
+button, select {
+  flex: 1;
+  height: 30px;
+  font-size: 14px;
+  font-weight: 400 !important;
+  color: #222222;
+  border-radius: 5px;
   background: linear-gradient(white, #e6e6e6);
   border: 1px solid #ccc;
-  display: inline-block;
-  font-size:14px;
-  color:black;
-  font-weight:lighter;
-}
-button:focus {outline:0;}
-input:focus {outline: none; }
-hr{
-  border: 0;
-  border-top: 1px solid #d2d2d2;
-  margin-top:11px;
+  cursor: pointer;
 }
 
-.line{
-  border-top: 3px solid grey;
-  margin-top:10px;
+button:focus {
+  outline:0;
 }
-#timeStamp{
-  float:right;
+
+input:focus, select:focus {
+  outline: none;
+}
+
+select {
+  padding-left: 3px;
+  margin-right: 2px;
+}
+
+button {
+  margin-left: 2px;
 }
